fixed career page content overlaping

--- a/css/main.css
+++ b/css/main.css
@@ -818,7 +818,6 @@ table tbody {
   color: #f4f4f4;
 }
 .careerSecondSection {
-  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
